[gd_scene load_steps=5 format=3 uid="uid://bqxxvmmv4pv12"]

[ext_resource type="Script" path="res://UI/tooltip_manager.gd" id="1_4r0iv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4r0iv"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.05, 0.07, 0.09, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.2, 0.3, 0.35, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_separator"]
bg_color = Color(0.3, 0.4, 0.5, 0.6)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_highlight"]
bg_color = Color(0.15, 0.2, 0.25, 0.3)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TooltipManager" type="CanvasLayer"]
script = ExtResource("1_4r0iv")

[node name="TooltipPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4r0iv")

[node name="BackgroundHighlight" type="Panel" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
theme_override_styles/panel = SubResource("StyleBoxFlat_highlight")

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 12.0
offset_right = -20.0
offset_bottom = -12.0
theme_override_constants/separation = 3
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemNameLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
text = "Item Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator1" type="HSeparator" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxFlat_separator")

[node name="ItemTypeLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
text = "Item Type"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemRarityLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "Rarity: Common"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemLevelLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxFlat_separator")

[node name="ItemStatsLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxFlat_separator")

[node name="ItemDescriptionLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="ShowTimer" type="Timer" parent="."]

[node name="HideTimer" type="Timer" parent="."]
